--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="dark">
+<!--  &lt;!&ndash; The core Firebase JS SDK is always required and must be listed first &ndash;&gt;-->
+<!--  <script src="/__/firebase/8.2.10/firebase-app.js"></script>-->
+
+<!--  &lt;!&ndash; TODO: Add SDKs for Firebase products that you want to use-->
+<!--       https://firebase.google.com/docs/web/setup#available-libraries &ndash;&gt;-->
+<!--  <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>-->
+
+<!--  &lt;!&ndash; Initialize Firebase &ndash;&gt;-->
+<!--  <script src="/__/firebase/init.js"></script>-->
   <app-root></app-root>
 </body>
 </html>
