--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JmstockanalysisWeb</title>
+  <title>ProducttrackerWeb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="dark">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.34/dist/themes/base.css">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.34/dist/shoelace.js"></script>
-<!--  &lt;!&ndash; The core Firebase JS SDK is always required and must be listed first &ndash;&gt;-->
-<!--  <script src="/__/firebase/8.2.10/firebase-app.js"></script>-->
-
-<!--  &lt;!&ndash; TODO: Add SDKs for Firebase products that you want to use-->
-<!--       https://firebase.google.com/docs/web/setup#available-libraries &ndash;&gt;-->
-<!--  <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>-->
-
-<!--  &lt;!&ndash; Initialize Firebase &ndash;&gt;-->
-<!--  <script src="/__/firebase/init.js"></script>-->
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
